# dataforge

./: .gitignore  Cargo.toml  HOW_TO_USE.md  LICENSE  README.md  TITAN_SPEC.md
benches/: large_dag.rs
examples/: benchmark.rs
macros/: generic_tests.sql
src/: api.rs  cli.rs  core.rs  db.rs  error.rs  filler.rs  hooks.rs  lib.rs  main.rs  mapper.rs  materialize.rs  metrics.rs  orchestrator.rs  parser.rs  project.rs  quality.rs  starlark_dsl.rs  telemetry.rs  tui.rs  types.rs  utils.rs
src/artifacts/: manifest.rs  mod.rs  run_results.rs
src/bridge/: mod.rs  rocky.rs  sdf.rs
src/circuit_breaker/: mod.rs
src/cli/: deps.rs  freshness.rs  mod.rs  promote.rs  setup.rs  status.rs
src/connectors/: adbc.rs  mod.rs  object_store.rs
src/core/: audit.rs  ci_diff.rs  column_map.rs  dialect.rs  drift.rs  lineage.rs  lineage_diff.rs  masking.rs  mod.rs  shadow.rs  sql.rs
src/cost/: mod.rs
src/execution/: mod.rs  muscle.rs
src/filler/: dag.rs  grace_period.rs  mod.rs  state.rs  table_guard.rs
src/fingerprint/: hash.rs  mod.rs  normalize.rs  template.rs
src/intern/: mod.rs
src/macros/: mod.rs  starlark.rs
src/mapper/: lineage.rs  mod.rs
src/materialize/: adbc.rs  incremental.rs  mod.rs  snapshot.rs  table.rs  vde.rs  view.rs
src/optimize/: dedup.rs  mod.rs
src/plugins/: wasm.rs
src/project/: exposures.rs  mod.rs  profiles.rs  secrets.rs
src/quality/: mod.rs  quarantine.rs  unit_test.rs
tests/: complex_dag_test.rs  contract_test.rs  dag_test.rs  e2e.rs  fingerprint_test.rs  integration.rs  integration_test.rs  production_hardening_test.rs  project_test.rs  real_world_e2e_test.rs  snapshot_test.rs  state.rs  state_test.rs  transpilation_test.rs  verify_masking.rs
tests/common/: mod.rs
ui/: app.js  index.html  styles.css
