[package]
name = "DataForge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
duckdb = { version = "1.10502.0", features = ["parquet"] }
futures = "0.3.32"
notify = "8.2.0"
petgraph = "0.8.3"
ratatui = "0.30.0"
rayon = "1.12.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
sqlparser = { version = "0.61.0", features = ["visitor"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "sqlite", "macros", "json"] }
starlark = "0.13.0"
starlark_derive = "0.13.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
