[package]
name = "titan-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
blake3 = "1.8.5"
clap = { version = "4.6.1", features = ["derive"] }
datafusion = "53.1.0"
flowscope-core = "0.7.0"
futures = "0.3.32"
minijinja = "2.19.0"
once_cell = "1.21.4"
petgraph = "0.8.3"
polyglot-sql = "0.3.5"
regex = "1.12.3"
rocksdb = { version = "0.21.0", features = ["lz4"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sov-schema-db = "0.3.0"
spiceai = "3.0.0"
sqlparser = "0.61.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
tempfile = "3.27.0"
