[package]
name = "titan-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.86"
blake3 = "1.8.5"
clap = { version = "4.6.1", features = ["derive"] }
datafusion = { version = "53.1.0", features = ["unicode_expressions", "compression"] }
object_store = { version = "0.13.2", features = ["aws", "gcp", "azure"] }
adbc_core = "0.23"
adbc_driver_manager = "0.23"
url = "2.5.0"
deltalake = { version = "0.32", features = ["datafusion"] }
chrono = "0.4"
flowscope-core = "0.7.0"
futures = "0.3.32"
minijinja = "2.19.0"
once_cell = "1.21.4"
petgraph = "0.8.3"
polyglot-sql = "0.3.5"
regex = "1.12.3"
rocksdb = { version = "0.21.0", features = ["lz4"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
sov-schema-db = "0.3.0"
spiceai = "3.0.0"
sqlparser = "0.61.0"
tempfile = "3.10.1"
thiserror = "2.0.18"
uuid = { version = "1.4", features = ["v4"] }
dotenvy = "0.15"
prometheus = "0.13"
hyper = { version = "0.14", features = ["full"] }
tokio-util = "0.7"


tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }
tracing-appender = "0.2.3"
md5 = "0.8.0"

[dev-dependencies]
tempfile = "3.10.1"
criterion = { version = "0.5.1", features = ["async_tokio"] }
proptest = "1.4"
assert_cmd = "2.0"

[[bench]]
name = "large_dag"
harness = false
